# spark_supply_optimizer

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.multihost.yml  docker-compose.yml  pyproject.toml
scripts/: start_spark_master.ps1  start_spark_master.sh  start_spark_worker.ps1  start_spark_worker.sh
src/spark_supply_optimizer/: __init__.py  cli.py  config.py  m5.py  metrics.py  spark.py
tests/: conftest.py  test_cli.py  test_compose.py  test_config.py  test_m5.py  test_spark.py
tests/integration/: test_minio_s3_runtime.py  test_spark_runtime.py
