[project]
name = "spark-supply-optimizer"
version = "0.1.0"
description = "Transparent PySpark baseline for Kaggle M5 Forecasting - Accuracy."
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "numpy>=2.0.0",
    "pyspark>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "debugpy>=1.8.0",
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]

[project.scripts]
m5-spark = "spark_supply_optimizer.cli:main"

[build-system]
requires = ["uv_build>=0.8.0,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
